fixing up spacing issues

--- a/app/assets/stylesheets/_variables.css.scss
+++ b/app/assets/stylesheets/_variables.css.scss
@@ -1,4 +1,5 @@
-$primary-color: #585858;
+//$primary-color: #585858;
+$primary-color: rgb(153, 153, 153)
 $link-color: black;
 $border-color: white;
 $trans-bg-color: rgba(0, 0, 0, .6);
