--- a/app/assets/stylesheets/front_page.css.scss
+++ b/app/assets/stylesheets/front_page.css.scss
@@ -17,7 +17,7 @@
 #fb-stuff {
     width: 702px;
     background-color: white;
-    border: 3px $primary-color solid;
+    border: 3px $trans-bg-color solid;
     margin-right: auto;
     margin-left: auto;
     margin-top: 50px;
