--- a/app/assets/stylesheets/performances.css.scss
+++ b/app/assets/stylesheets/performances.css.scss
@@ -73,7 +73,7 @@
 
 .thumbnail-feed {
     width: 1000px;
-    margin-left: -92px;
+    margin-left: -100px;
     // Use flexbox to keep single / double performances centered
     display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
     display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
